Added general case

--- a/projects/PCA_to_DCA/notebooks/Markov_chain_distributions_2x2_case.ipynb
+++ b/projects/PCA_to_DCA/notebooks/Markov_chain_distributions_2x2_case.ipynb
@@ -8,14 +8,14 @@
     "\n",
     "Here we are not concerned with a single markov chain but learning from the aggregate dynamics of the chains. \n",
     "\n",
-    "$A$ is a transition matrix and we start with an initial distribution of $[1,0]$ which means that 100% of samples are in state 1. A is column stochastic. \n",
+    "$A$ is a transition matrix and we start with an initial distribution of $[1,0]$ which means that 100% of samples are in state 1. The matrix $A$ is column stochastic. \n",
     "\n",
     "$$ A = \\begin{bmatrix} \\alpha & 1 - \\beta \\\\ 1 - \\alpha & \\beta\\end{bmatrix}$$\n",
     "\n",
     "As $k$ increases, $A^{k} v_0$ will converge for most reasonable values of $\\alpha$ and $\\beta$. We can figure out what it converges to by just observing the first two distributions.\n",
     "\n",
     "At the first step the distribution will be $[\\alpha, 1 - \\alpha]$ and if we know what these values are, we can figure out $\\alpha$. \n",
-    "At the second step the distribution will be $[\\alpha^2 + (1 - \\alpha)(1 - \\beta), \\alpha (1 -\\alpha) + \\beta (1 - \\alpha) ]$. If we know this value and we know the value of $\\alpha$ from step 1 we can figure out what $\\beta$ is. Once we have recovered $\\alpha$ and $\\beta$ we know the transition matrix and the eigenvector corresponding to the eigenvalue 1 will give us the equilibrium distribution. "
+    "At the second step the distribution will be $[\\alpha^2 + (1 - \\alpha)(1 - \\beta), \\alpha (1 -\\alpha) + \\beta (1 - \\alpha) ]$. If we know this value and we know the value of $\\alpha$ from step 1 we can figure out what $\\beta$ is. Once we have recovered $\\alpha$ and $\\beta$ we can recover the transition matrix. The eigenvector of the transition matrix $A$ corresponding to the eigenvalue $1$ will give us the equilibrium distribution. "
    ]
   },
   {
@@ -147,6 +147,22 @@
     "            )\n",
     "plt.title(\"Showing that we can predict the equilibrium distribution after just two rounds\")\n",
     "plt.savefig(\"assets/Distribution Dynamics Each Round 2x2.png\", transparent=False, dpi=600)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General $n \\times n$ case <a id=\"generalcase\"></a>\n",
+    "\n",
+    "We can generalize this to the $n\\times n $ case by solving the recurrence relations. \n",
+    "$$A v_{k} = v_{k+1} \\hspace{.2in} \\forall \\hspace{.2in} 0 \\leq k \\leq n-1.$$ If we have $n$ rounds then we can recover $A$ with a system of linear equations. We also need to ensure that \n",
+    "1. The entries of $A$ are positive (or atleast non-negative)\n",
+    "2. The the columns of $A$ sum up to one. \n",
+    "\n",
+    "We can add both these conditions as constraints and find an optimal solution with the method of Lagrange Multipliers. However if we have fewer than $n$ rounds of evolution then our solution would not be unique. We would need another constraint. \n",
+    "1. Minimize the norm of $A$. This should give us a unique solution.\n",
+    "2. Put in a biologically motivated prior for the transition matrix. The Maximum a posteriori estimate will be the solution. "
    ]
   }
  ],
