--- a/projects/PCA_to_DCA/notebooks/SCA.ipynb
+++ b/projects/PCA_to_DCA/notebooks/SCA.ipynb
@@ -81,7 +81,12 @@
     "pseudo_count_ratio = 0.03\n",
     "\n",
     "f_i_a = (pseudo_count_ratio / q ) + (1 - pseudo_count_ratio) * f_i_a / M_eff\n",
-    "f_i_j_a_b = (pseudo_count_ratio  / (q*q) ) + (1 - pseudo_count_ratio) * f_i_j_a_b / M_eff"
+    "f_i_j_a_b = (pseudo_count_ratio  / (q*q) ) + (1 - pseudo_count_ratio) * f_i_j_a_b / M_eff\n",
+    "\n",
+    "# The formula for f_i_j_a_b is a little different when i==j\n",
+    "# essentially we have f_i_a on the diagonal and zero's everywhere else. \n",
+    "for i in range(L):\n",
+    "    f_i_j_a_b[i, :, i, :] = np.diag(f_i_a[i, :])"
    ]
   },
   {
