--- a/projects/PCA_to_DCA/notebooks/DHFR_energy_function.ipynb
+++ b/projects/PCA_to_DCA/notebooks/DHFR_energy_function.ipynb
@@ -67,13 +67,13 @@
     }
    ],
    "source": [
-    "# read in the first line of the alignment (which has the human version of DHFR)\n",
+    "# read in the first line of the alignment (which has the WT version of DHFR)\n",
     "datadir = \"../data\"\n",
     "msa_file = os.path.join(datadir, \"DHFR.aln\")\n",
     "with open(msa_file) as fh:\n",
-    "    human_DHFR = np.array([[x for x in fh.readline().strip()] ], np.dtype(\"S1\"))\n",
+    "    wt_DHFR = np.array([[x for x in fh.readline().strip()] ], np.dtype(\"S1\"))\n",
     "\n",
-    "human_DHFR.tostring().decode('ascii')"
+    "wt_DHFR.tostring().decode('ascii')"
    ]
   },
   {
@@ -92,7 +92,6 @@
     }
    ],
    "source": [
-    "\n",
     "weights_file = os.path.join(datadir, \"DHFR.weights.npy\")\n",
     "\n",
     "print(\"Loading weights from : \", weights_file)\n",
@@ -246,16 +245,16 @@
     }
    ],
    "source": [
-    "human_DHFR_idx = np.zeros(human_DHFR.shape, dtype=np.int)\n",
+    "wt_DHFR_idx = np.zeros(wt_DHFR.shape, dtype=np.int)\n",
     "for i, a in enumerate(AMINO_ACIDS):\n",
-    "    human_DHFR_idx[human_DHFR == a] = i\n",
-    "human_DHFR_idx = human_DHFR_idx.squeeze()\n",
+    "    wt_DHFR_idx[wt_DHFR == a] = i\n",
+    "wt_DHFR_idx = wt_DHFR_idx.squeeze()\n",
     "    \n",
-    "if human_DHFR.tostring().decode('ascii').find(\"-\") >= 0 :\n",
+    "if wt_DHFR.tostring().decode('ascii').find(\"-\") >= 0 :\n",
     "    raise ValueError(\"We should not have gaps in this protein\")\n",
     "\n",
     "# the array below tells us the index of the amino acid in each position\n",
-    "human_DHFR_idx[:10]"
+    "wt_DHFR_idx[:10]"
    ]
   },
   {
@@ -303,163 +302,8 @@
     }
    ],
    "source": [
-    "human_DHFR_energy = calculate_energy_function(human_DHFR_idx)\n",
-    "human_DHFR_energy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = os.path.join(datadir, \"output\", \"mutagenesis\")\n",
-    "!mkdir -p $output_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../data/output/mutagenesis/single_mutants.tsv'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# single mutants\n",
-    "single_mutant_energy_filename = os.path.join(output_dir, \"single_mutants.tsv\")\n",
-    "single_mutant_energy_filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(single_mutant_energy_filename, \"w\") as fh:\n",
-    "    AA_ascii = AMINO_ACIDS.tostring().decode('ascii')\n",
-    "    for i in seq_runner:\n",
-    "        aa_idx = human_DHFR_idx[i]\n",
-    "        aa = AA_ascii[aa_idx]\n",
-    "        for mut_idx in range(1, (q-1)): # do not switch to the gap symbol\n",
-    "            if (mut_idx != aa_idx): # do not switch to mutant with the same symbol as WT\n",
-    "                mut = AA_ascii[mut_idx]\n",
-    "                mut_DHFR_idx = human_DHFR_idx.copy()\n",
-    "                mut_DHFR_idx[i] = mut_idx\n",
-    "                delta_energy = calculate_energy_function(mut_DHFR_idx) - human_DHFR_energy\n",
-    "                print(\"{}{}{}\\t{}\".format(aa, i + 1, mut, delta_energy), file=fh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../data/output/mutagenesis/double_mutants.tsv'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# double mutants\n",
-    "double_mutant_energy_filename = os.path.join(output_dir, \"double_mutants.tsv\")\n",
-    "double_mutant_energy_filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "progress_bar = True\n",
-    "try:\n",
-    "    from IPython.display import clear_output\n",
-    "except ImportError:\n",
-    "     progress_bar = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing site i=185, j=186 of 186\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(double_mutant_energy_filename, \"w\") as fh:\n",
-    "    AA_ascii = AMINO_ACIDS.tostring().decode('ascii')\n",
-    "    for i in seq_runner:\n",
-    "        aa1_idx = human_DHFR_idx[i]\n",
-    "        aa1 = AA_ascii[aa1_idx]\n",
-    "        for j in seq_runner:\n",
-    "            if (i < j): #if i = j then we are creating single mutants\n",
-    "                if progress_bar:\n",
-    "                    clear_output(wait=True)\n",
-    "                print (\"Processing site i={}, j={} of {}\".format(i+1, j+1, L))\n",
-    "                aa2_idx = human_DHFR_idx[j]\n",
-    "                aa2 = AA_ascii[aa2_idx]\n",
-    "                for mut1_idx in range(1, (q-1)): # do not switch to the gap symbol\n",
-    "                    mut1 = AA_ascii[mut1_idx]\n",
-    "                    if mut1_idx != aa1_idx:\n",
-    "                        for mut2_idx in range(1, (q-1)):\n",
-    "                            if (mut1_idx != mut2_idx) and (mut2_idx != aa2_idx):\n",
-    "                                mut2 = AA_ascii[mut2_idx]\n",
-    "                                mut_DHFR_idx = human_DHFR_idx.copy()\n",
-    "                                mut_DHFR_idx[i] = mut1_idx\n",
-    "                                mut_DHFR_idx[j] = mut2_idx\n",
-    "                                delta_energy = calculate_energy_function(mut_DHFR_idx) - human_DHFR_energy\n",
-    "                                print(\"{}{}{},{}{}{}\\t{}\".format(aa1, i+1, mut1, aa2, j+1, mut2, delta_energy), \n",
-    "                                      file=fh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "V1K,R2D\t31.87927557947114\r\n",
-      "V1K,R2E\t309.51833512343\r\n",
-      "V1K,R2Q\t56.17938261444215\r\n",
-      "V1K,R2N\t44.450972370337695\r\n",
-      "V1K,R2H\t-144.60366218630224\r\n",
-      "V1K,R2S\t166.23410664580297\r\n",
-      "V1K,R2T\t-9.35990967892576\r\n",
-      "V1K,R2C\t-192.77644689567387\r\n",
-      "V1K,R2Y\t-22.479595377924852\r\n",
-      "V1K,R2W\t-144.34820251725614\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "# inspect and compress the file\n",
-    "!head $double_mutant_energy_filename\n",
-    "!gzip -f $double_mutant_energy_filename"
+    "wt_DHFR_energy = calculate_energy_function(wt_DHFR_idx)\n",
+    "wt_DHFR_energy"
    ]
   }
  ],
